consumo de json

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     <textarea rows="4" placeholder="Add comment..." class="rounded border-light shadow border border-2 form-control w-100" name="text-area-comment" id="text-area-comment"></textarea>
                                 </div>
                                 <div>
-                                    <button id="send-comment" class="rounded py-3 px-5 border-0 w-100 bg-purple-dark text-white">SEND</button>
+                                    <button id-video="0" id="send-comment" class="rounded py-3 px-5 border-0 w-100 bg-purple-dark text-white">SEND</button>
                                 </div>
                             </div>
                         </div>
