consumo de json

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <div id="comments" class="d-flex flex-column mt-4"></div>
                     <div class="py-4">
                         <div id="comment-on-the-video" class="rounded shadow p-3">
-                            <div class="d-flex flex-row">
+                            <div class="d-flex flex-column gap-3">
                                 <div class="thumbnail-profile">
                                     <img src="./assets/img/avatar.png">
                                 </div>
-                                <div class="w-100 mx-4">
+                                <div class="w-100">
                                     <textarea rows="4" placeholder="Add comment..." class="rounded border-light shadow border border-2 form-control w-100" name="text-area-comment" id="text-area-comment"></textarea>
                                 </div>
                                 <div>
