--- a/register-new-videos.html
+++ b/register-new-videos.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400&display=swap">
     <link rel="stylesheet" href="./assets//css/page.css">
-    <title>Content Hub</title>
+    <title>Regiter new videos</title>
 </head>
 
 <body class="bg-light">
@@ -34,10 +34,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="register-new-videos.html">register new videos</a>
+                            <a class="nav-link active" href="register-new-videos.html">register new videos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -59,47 +59,24 @@
         </div>
     </nav>
     <div class="container-fluid px-5 pt-5">
-        <h1 class="text-secondary">Content Hub</h1>
-        <div class="container-fluid">
-            <div class="row flex-row-reverse px-2">
-                <div class="col-lg-4 col-md-4 col-sm-12 pt-4">
-                    <div class="d-flex align-items-center justify-content-around rounded shadow py-3 px-5 div-search">
-                        <i class="fas fa-search text-secondary opacity-25"></i>
-                        <input type="text" class="input-search bg-light" placeholder="O que está procurando ?">
-                    </div>
-                    <div class="pt-4">
-                        <div id="card-videos" class="rounded shadow py-3 px-5"></div>
-                    </div>
+        <h1 class="text-secondary">Regiter new videos</h1>
+        <div class="container mt-4">
+            <form class="d-flex gap-3 flex-column" id="form-new-video">
+                <div>
+                    <label for="name-video" role="button" class="mb-2">Name Video</label>
+                    <input required type="text" class="form-control form-control-lg" name="name" id="name-video" placeholder="Name Video">
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-12 pt-4">
-                    <div class="card">
-                        <iframe id="iframe-videos" class="w-100" height="500"
-                            src="https://www.youtube.com/embed/4JZpmJpjdl4?si=fZQCEZ5bkWGO6EXR"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div id="comments" class="d-flex flex-column mt-4"></div>
-                    <div class="py-4">
-                        <div id="comment-on-the-video" class="rounded shadow p-3">
-                            <div class="d-flex flex-column gap-3">
-                                <div class="thumbnail-profile">
-                                    <img src="./assets/img/avatar.png">
-                                </div>
-                                <div class="w-100">
-                                    <textarea rows="4" placeholder="Add comment..."
-                                        class="rounded border-light shadow border border-2 form-control w-100"
-                                        name="text-area-comment" id="text-area-comment"></textarea>
-                                </div>
-                                <div>
-                                    <button id-video="0" id="send-comment"
-                                        class="rounded py-3 px-5 border-0 w-100 bg-purple-dark text-white">SEND</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div>
+                    <label for="url-video" role="button" class="mb-2">URL embed</label>
+                    <input required type="text" class="form-control form-control-lg" name="url" id="url-video" placeholder="URL embed">
                 </div>
-            </div>
+                <div>
+                    <button type="submit" class="btn btn-primary" id="submit-new-video">
+                        Send new video
+                    </button>
+                </div>
+                
+            </form>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -111,7 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
-    <script type="module" src="./assets/script/script.js"></script>
+    <script type="module" src="./assets//script/send-new-video.js"></script>
 </body>
 
 </html>
