--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="bg-light">
     <nav class="navbar navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Content Hub</a>
+            <a class="navbar-brand" href="index.html">Content Hub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -37,21 +37,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="register-new-videos.html">register new videos</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            <a class="nav-link" href="register-new-videos.html">Register new videos</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +48,7 @@
         <h1 class="text-secondary">Content Hub</h1>
         <div class="container-fluid">
             <div class="row flex-row-reverse px-2">
-                <div class="col-lg-4 col-md-4 col-sm-12 pt-4">
+                <div class="col-lg-4 col-md-6 col-sm-12 pt-4">
                     <div class="d-flex align-items-center justify-content-around rounded shadow py-3 px-5 div-search">
                         <i class="fas fa-search text-secondary opacity-25"></i>
                         <input type="text" class="input-search bg-light" placeholder="O que está procurando ?">
@@ -71,7 +57,7 @@
                         <div id="card-videos" class="rounded shadow py-3 px-5"></div>
                     </div>
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-12 pt-4">
+                <div class="col-lg-8 col-md-6 col-sm-12 pt-4">
                     <div class="card">
                         <iframe id="iframe-videos" class="w-100" height="500"
                             src="https://www.youtube.com/embed/4JZpmJpjdl4?si=fZQCEZ5bkWGO6EXR"
@@ -92,8 +78,10 @@
                                         name="text-area-comment" id="text-area-comment"></textarea>
                                 </div>
                                 <div>
-                                    <button id-video="0" id="send-comment"
-                                        class="rounded py-3 px-5 border-0 w-100 bg-purple-dark text-white">SEND</button>
+                                    <button id-video="0" id="send-comment" class="rounded py-3 px-5 border-0 w-100 bg-purple-dark text-white">
+                                        SEND
+                                        <i class="fas fa-paper-plane"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
